--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,13 @@ body{
     margin: 0 auto;
     padding: 0 15px;
 }
+h2 {
+    color: #01996D;
+    font-family: Georgia;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 157%;
+}
 /* Header */
 .header {
     min-height: 895px;
@@ -47,6 +54,7 @@ body{
     align-items: center;
     padding-top: 30px;
     padding-bottom: 30px;
+    border-bottom: 1px solid #D6D6D6;
 }
 .menu__container {
     display: flex;
@@ -101,9 +109,13 @@ body{
 .menu__buttons-primary:hover {
     border-color: #fff;
 }
+/* Advantages */
 .advantages {
+    padding-top: 169px;
 }
 .advantages__text {
+    display: flex;
+    justify-content: space-between;
 }
 .advantages__title {
 }
