--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,12 @@ h2 {
     font-weight: 700;
     line-height: 157%;
 }
+.text__caption {
+    color: #424242;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 157%;
+}
 /* Header */
 .header {
     min-height: 895px;
