--- a/styles/main.css
+++ b/styles/main.css
@@ -43,11 +43,12 @@ a {
 }
 /* Header */
 .header {
-    min-height: 895px;
+    max-height: 895px;
+    background-size: 100%;
     height: 100%;
+    width: 100%;
     background-image: url(../assets/header-bg.png);
     background-repeat: no-repeat;
-    background-size: contain;
 }
 .header h1 {
     color: #01996D;
@@ -70,6 +71,9 @@ a {
 .menu {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    max-width: 1920px;
+    margin: 0 auto;
     padding-top: 14px;
     padding-bottom: 15px;
     border-bottom: 1px solid #D6D6D6;
@@ -78,6 +82,7 @@ a {
 .menu__container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .menu__logo {
     cursor: pointer;
@@ -121,10 +126,8 @@ a {
     cursor: pointer;
 }
 .menu__buttons-secondary {
-    border: none;
-    border-color: white;
     font-size: 20px;
-    font-weight: 400;
+    border: none;
     background-color: #fff;
     padding-left: 10px;
 }
@@ -179,6 +182,7 @@ a {
     display: flex;
     justify-content: space-between;
     max-width: 1368px;
+    width: 100%;
 }
 .advantages__item {
     position: relative;
@@ -190,6 +194,7 @@ a {
     font-weight: 400;
     line-height: 150%;
     position: relative;
+    max-width: 175px;
 }
 .advantages__item-title {
     color: #000;
@@ -257,7 +262,8 @@ a {
 }
 .promo {
     background-color: #245852;
-    height: 922px;
+    max-height: 922px;
+    height: 100%;
     padding: 48px 207px;
 }
 .promo_wrapper {
@@ -293,7 +299,7 @@ a {
     position: relative;
     margin-top: 180px;
     overflow: hidden;
-    width: 896px;
+    max-width: 896px;
     border-radius: 16px;
 }
 video {
@@ -417,7 +423,6 @@ video {
     display: flex;
     background: #245852;
     padding-top: 100px;
-
 }
 .footer__menu {
     color: #FFF;
@@ -438,4 +443,125 @@ video {
 }
 a:visited  {
     color: inherit;
+}
+/* Laptop */
+@media screen and (max-width: 1440px) {
+    .container {
+        padding: 0 30px;
+    }
+    .menu__list li{
+        margin-right: 50px;
+    }
+    .promo__block {
+        padding-top: 64px;
+    }
+    .footer__menu {
+        padding-bottom: 24px;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .container {
+        padding: 0 30px;
+        border: 1px solid red;
+    }
+    .menu__logo {
+        margin-right: 70px;
+    }
+    .menu__list li{
+        margin-right: 24px;
+        font-size: 18px;
+    }
+    .menu__buttons {
+        margin-left: 64px;
+    }
+    .btn {
+        font-size: 18px;
+        
+    }
+    .menu__buttons-primary {
+        padding: 11px 46px;
+    }
+    .menu__buttons-secondary {
+        font-size: 18px;
+    }
+    .header h1 {
+        font-size: 48px;
+        padding-top: 102px;
+        padding-bottom: 29px;
+    }
+    .header__button {
+        margin-bottom: 20px;
+    }
+    .text__description {
+        font-size: 18px;
+    }
+    .advantages {
+        padding-top: 120px;
+        padding-bottom: 48px;
+    }
+    .our-products__caption {
+        font-size: 20px;
+    }
+    h2 {
+        font-size: 42px;
+    }
+    .advantages__text {
+        font-size: 18px;
+        flex-direction: column;
+        align-items: start;
+        padding-left: 0;
+    }
+    .num {
+        font-size: 100px;
+    }
+    .advantages__item-title {
+        font-size: 24px;
+        top: 86px;
+        left: 54px;
+        padding-top: 0;
+    }
+    .advantages__item-description {
+        font-size: 16px;
+        padding-bottom: 30px;
+    }
+    .advantages__img {
+        width: 230px;
+    }
+    .advantages__item:first-child {
+        margin-right: 40px;
+    }
+    .advantages__item:nth-child(2) {
+        margin-top: 227px;
+        padding-right: 130px;
+    }
+    .advantages__item:nth-child(2) .advantages__item-title {
+        top: 87px;         
+        left: 56px;
+    }
+    .advantages__item:nth-child(2) .advantages__item-description {
+        padding-bottom: 30px;
+        width: 240px;
+    }
+    .advantages__item:nth-child(3) {
+        margin-right: 0;
+    }
+    .advantages__item:nth-child(3) .advantages__item-title {
+        top: 140px;         
+        left: 112px;
+    }
+    .advantages__item:nth-child(3) .advantages__item-description {
+        padding-right: 60px;
+
+    }
+    .promo {
+        padding: 0 50px 100px;
+    }
+    .video__block {
+
+    }
+    video {
+    }
+    .video__play {
+
+    }
 }
