--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ a {
     color: #424242;
     font-weight: 600;
     line-height: 157%;
+    font-size: 25px;
 }
 .text__description {
     color: #484848;
@@ -156,9 +157,6 @@ a {
     flex-direction: column;
     max-width: 586px;
     width: 100%;
-}
-.our-products__caption {
-    font-size: 24px;
 }
 .advantages__title {
     color: #01996D;
@@ -459,6 +457,9 @@ a:visited  {
         padding: 0 30px;
         border: 1px solid red;
     }
+    .btn__primary {
+        padding: 16px 42px;
+    }
     .menu__logo {
         margin-right: 70px;
     }
@@ -471,7 +472,6 @@ a:visited  {
     }
     .btn {
         font-size: 18px;
-
     }
     .menu__buttons-primary {
         padding: 11px 46px;
@@ -485,10 +485,11 @@ a:visited  {
         padding-bottom: 29px;
     }
     .header__button {
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     .text__description {
         font-size: 18px;
+        margin-bottom: 36px;
     }
     .advantages {
         padding-top: 120px;
@@ -498,7 +499,7 @@ a:visited  {
         font-size: 20px;
     }
     h2 {
-        font-size: 42px;
+        font-size: 40px;
     }
     .advantages__text {
         font-size: 18px;
@@ -549,14 +550,103 @@ a:visited  {
 
     }
     .promo {
-        padding: 0 50px 100px;
+        padding: 0 50px;
     }
     .video__block {
-
+        border-radius: 16px;
+        margin-top: 100px;
+        margin-bottom: 100px;
     }
-    video {
+    .our-products .container {
+        margin-top: 100px;
+        margin-bottom: 120px;
     }
-    .video__play {
-
+    .card__container {
+        margin-left: 58px;
+        position: relative;
+    }
+    .card-img {
+        width: 100%;
+        height: auto;
+    }
+    .card {
+        width: 256px;
+        height: 254px;
+        position: absolute;
+        filter: drop-shadow(0 3.622px 18.112px rgba(165, 165, 165, 0.25));
+        border-radius: 4px;
+        background: #FFF;
+        top: 61%;
+        left: -9%;
+    }
+    .card__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 24px;
+    }
+    .card__title {
+        color: #000;
+        font-size: 14.49px;
+        font-weight: 600;
+        line-height: 157%; /* 22.749px */
+        max-width: 100%;
+        padding-bottom: 7px;
+    }
+    .card__divider:before {
+        content: "";
+        display: block;
+        background-color: #000;
+        width: 110px;
+        height: 1px;
+    }
+    .card__avatar {
+        padding-top: 13px;
+        padding-bottom: 10px;
+    }
+    .card__avatar-name {
+        color: #000;
+        text-align: center;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 157%; /* 18.738px */
+    }
+    .card__list {
+        display: flex;
+        flex-direction: column;
+    }
+    .card__list ul{
+        padding-left: 75px;
+    }
+    .card__list-title {
+        color: #000;
+        font-family: Georgia;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 157%; /* 25.009px */
+        padding-top: 17px;
+        margin: 0 auto;
+    }
+    .card__list li{
+        color: #000;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 157%; /* 16.673px */
+    }
+    .card__list li:first-child{
+        padding-bottom: 14px;
+    }
+    .our-products__text {
+        margin-left: 86px;
+    }
+    .our-products__caption {
+        font-size: 16px;
+    }
+    .our-products__description {
+        padding-top: 20px;
+        padding-bottom: 34px;
+        max-width: 530px;
+        width: 100%;
     }
 }
