--- a/styles/main.css
+++ b/styles/main.css
@@ -453,6 +453,9 @@ a:visited  {
     }
 }
 @media screen and (max-width: 1024px) {
+    .text__caption {
+        font-size: 20px;
+    }
     .container {
         padding: 0 30px;
         border: 1px solid red;
