--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,6 @@ p, h1, h2, h3, h4 {
 a {
     text-decoration: none;
 }
-
 .text__caption {
     color: #424242;
     font-weight: 600;
@@ -36,11 +35,11 @@ a {
     font-size: 25px;
 }
 .text__description {
-    color: #484848;
+    color: #424242;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 144.5%;
+    line-height: 157%;
 }
 .btn__primary {
     display: inline-flex;
@@ -458,7 +457,6 @@ a:visited  {
     }
     .container {
         padding: 0 30px;
-        border: 1px solid red;
     }
     .btn__primary {
         padding: 16px 42px;
@@ -488,21 +486,25 @@ a:visited  {
         padding-bottom: 29px;
     }
     .header__button {
-        margin-bottom: 30px;
+        margin-bottom: 70px;
+    }
+    .header__description {
+        max-width: 340px;
     }
     .text__description {
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 36px;
     }
     .advantages {
         padding-top: 120px;
         padding-bottom: 48px;
     }
-    .our-products__caption {
-        font-size: 20px;
-    }
     h2 {
         font-size: 40px;
+    }
+    .advantages__description {
+        padding-left: 0;
+        max-width: 500px;
     }
     .advantages__text {
         font-size: 18px;
@@ -550,7 +552,9 @@ a:visited  {
     }
     .advantages__item:nth-child(3) .advantages__item-description {
         padding-right: 60px;
-
+    }
+    .promo__description {
+        font-size: 20px;
     }
     .promo {
         padding: 0 50px;
@@ -569,73 +573,38 @@ a:visited  {
         position: relative;
     }
     .card-img {
-        width: 100%;
+        width: 110%;
         height: auto;
     }
     .card {
-        width: 256px;
-        height: 254px;
-        position: absolute;
-        filter: drop-shadow(0 3.622px 18.112px rgba(165, 165, 165, 0.25));
-        border-radius: 4px;
-        background: #FFF;
-        top: 61%;
-        left: -9%;
+        width: 186px;
+        height: auto;
+        top: 71%;
+        left: -12%;
     }
     .card__wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 24px;
+        padding-top: 18px;
     }
     .card__title {
-        color: #000;
-        font-size: 14.49px;
-        font-weight: 600;
-        line-height: 157%; /* 22.749px */
-        max-width: 100%;
-        padding-bottom: 7px;
+        font-size: 12px;
     }
     .card__divider:before {
-        content: "";
-        display: block;
-        background-color: #000;
-        width: 110px;
+        width: 100px;
         height: 1px;
     }
     .card__avatar {
-        padding-top: 13px;
+        padding-top: 10px;
         padding-bottom: 10px;
     }
     .card__avatar-name {
-        color: #000;
-        text-align: center;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 157%; /* 18.738px */
-    }
-    .card__list {
-        display: flex;
-        flex-direction: column;
-    }
-    .card__list ul{
-        padding-left: 75px;
+        font-size: 10px;
+        padding-bottom: 8px;
     }
     .card__list-title {
-        color: #000;
-        font-family: Georgia;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 157%; /* 25.009px */
-        padding-top: 17px;
-        margin: 0 auto;
+        font-size: 13px;
     }
     .card__list li{
-        color: #000;
         font-size: 11px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 157%; /* 16.673px */
     }
     .card__list li:first-child{
         padding-bottom: 14px;
@@ -647,9 +616,26 @@ a:visited  {
         font-size: 16px;
     }
     .our-products__description {
-        padding-top: 20px;
-        padding-bottom: 34px;
-        max-width: 530px;
-        width: 100%;
+        padding-bottom: 0;
+        max-width: 420px;
+    }
+    .card__list-title {
+        padding-top: 0;
+    }
+    .card__list ul {
+        padding-left: 35px;
+        margin-top: 8px;
+    }
+    .our-products .container {
+    }
+    .footer {
+        margin-top: 200px;
+        padding-top: 40px;
+    }
+    .footer__menu {
+        font-size: 20px;
+    }
+    .footer__menu li {
+        margin-top: 46px;
     }
 }
