--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,30 @@ a {
     align-items: center;
     gap: 30px;
 }
+.sidenav {
+    display: none;
+}
+.burger {
+    display: none;
+    width: 70px;
+    height: 70px;
+    cursor: pointer;
+    background-color: var(--accent-color);
+    border: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.burger__line {
+    display: block;
+    width: 26px;
+    height: 3px;
+    background-color: #01996D;
+    margin-bottom: 4px;
+}
+.burger__line:last-child {
+    margin-bottom: 0;
+}
 /* Header */
 .header {
     max-height: 895px;
@@ -637,5 +661,200 @@ a:visited  {
     }
     .footer__menu li {
         margin-top: 46px;
+    }
+}
+/*Tablet*/
+@media (max-width: 768px) {
+    /* Menu */
+    .sidenav {
+        display: block;
+    }
+    ul#slide-out:not(.browser-default) {
+        padding-left: 0;
+        list-style-type: none;
+    }
+
+    ul#slide-out:not(.browser-default) > li {
+        list-style-type: none;
+    }
+    #slide-out a {
+        text-decoration: none;
+        -webkit-tap-highlight-color: transparent;
+    }
+    .sidenav {
+        -webkit-box-shadow: 0 2px 2px 0 rgba(164, 229, 100, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+                box-shadow: 0 2px 2px 0 rgba(164, 229, 100, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    }
+    .sidenav .collapsible,
+    .sidenav.fixed .collapsible {
+        border: none;
+        -webkit-box-shadow: none;
+                box-shadow: none;
+    }
+
+    .sidenav .collapsible li,
+    .sidenav.fixed .collapsible li {
+        padding: 0;
+    }
+
+    .sidenav .collapsible-header,
+    .sidenav.fixed .collapsible-header {
+        background-color: transparent;
+        border: none;
+        line-height: inherit;
+        height: inherit;
+        padding: 0 16px;
+    }
+
+    .sidenav .collapsible-header:hover,
+    .sidenav.fixed .collapsible-header:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    .sidenav .collapsible-header i,
+    .sidenav.fixed .collapsible-header i {
+        line-height: inherit;
+    }
+
+    .sidenav .collapsible-body,
+    .sidenav.fixed .collapsible-body {
+        border: 0;
+        background-color: #fff;
+    }
+
+    .sidenav .collapsible-body li a,
+    .sidenav.fixed .collapsible-body li a {
+        padding: 0 23.5px 0 31px;
+    }
+    .sidenav {
+        position: fixed;
+        width: 300px;
+        left: 0;
+        top: 0;
+        margin: 0;
+        -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
+        height: 100%;
+        height: calc(100% + 60px);
+        height: -moz-calc(100%);
+        padding-bottom: 60px;
+        background-color: #fff;
+        z-index: 999;
+        overflow-y: auto;
+        will-change: transform;
+        -webkit-backface-visibility: hidden;
+                backface-visibility: hidden;
+        -webkit-transform: translateX(-105%);
+                transform: translateX(-105%);
+    }
+
+    .sidenav .collapsible {
+        margin: 0;
+    }
+
+    .sidenav li {
+        float: none;
+        line-height: 48px;
+    }
+
+    .sidenav li.active {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    .sidenav li > a {
+        color: rgba(0, 0, 0, 0.87);
+        display: block;
+        font-size: 14px;
+        font-weight: 500;
+        height: 48px;
+        line-height: 48px;
+        padding: 0 32px;
+    }
+
+    .sidenav li > a:hover {
+        background-color: rgba(0, 164, 229, 0.56);
+    }
+
+    .sidenav li > a > i,
+    .sidenav li > a > [class^="mdi-"], .sidenav li > a li > a > [class*="mdi-"],
+    .sidenav li > a > i.material-icons {
+        float: left;
+        height: 48px;
+        line-height: 48px;
+        margin: 0 32px 0 0;
+        width: 24px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+    .sidenav .divider {
+        margin: 8px 0 0 0;
+    }
+    .dropdown-content li.divider {
+        min-height: 0;
+        height: 1px;
+    }
+    .divider {
+        height: 1px;
+        overflow: hidden;
+        background-color: #e0e0e0;
+    }
+    .sidenav .subheader {
+        cursor: initial;
+        pointer-events: none;
+        color: rgba(0, 0, 0, 0.54);
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 48px;
+    }
+    .sidenav .subheader:hover {
+        background-color: transparent;
+    }
+    .sidenav .user-view {
+        position: relative;
+        padding: 32px 32px 0;
+        margin-bottom: 8px;
+    }
+    .sidenav .user-view > a {
+        height: auto;
+        padding: 0;
+    }
+
+    .sidenav .user-view > a:hover {
+        background-color: transparent;
+    }
+
+    .sidenav .user-view .background {
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+    }
+    nav .sidenav-trigger {
+        float: left;
+        position: relative;
+        z-index: 1;
+        height: 56px;
+        margin: 0 18px;
+    }
+    nav .sidenav-trigger i {
+        height: 56px;
+        line-height: 56px;
+    }
+    .burger {
+        display: flex;  
+    }
+    .menu__list {
+        display: none;
+    }
+    .container {
+        outline: 1px solid red;
+    }
+    .menu__logo {
+        margin-right: 0;
+    }
+    .menu__buttons {
+        display: none;
     }
 }
