--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Font Awesome';
+    src: url('/webfonts/fa-solid-900.woff2') format('woff2');
+}
 html {
     box-sizing: border-box;
 }
