--- a/styles/main.css
+++ b/styles/main.css
@@ -987,7 +987,6 @@ a:visited  {
     .container {
         max-width: 425px;
         padding: 0 20px;
-        outline: 1px solid red;
     }
     nav .sidenav-trigger {
         margin: 0;
@@ -1088,4 +1087,7 @@ a:visited  {
     .footer__menu li {
         margin-top: 20px;
     }
+}
+@media (max-width: 320px) {
+
 }
